feat: add all-label and modify upload plugin
